infrastructure/manifests/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: k8s
---
apiVersion: v1
kind: Namespace
metadata:
  name: vault
---
apiVersion: v1
kind: Namespace
metadata:
  name: consul
---
apiVersion: v1
kind: Namespace
metadata:
  name: dj-api
---
apiVersion: v1
kind: Namespace
metadata:
  name: fa-api
