infrastructure/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: l2l-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - learn2learn.duckdns.org
    secretName: l2l-cert-wbvg4
  rules:
  - host: learn2learn.duckdns.org
    http:
      paths:
      - path: /dj
        pathType: Prefix
        backend:
          service:
            name: dj-service
            port:
              number: 8000
      - path: /fa
        pathType: Prefix
        backend:
          service:
            name: fa-service
            port:
              number: 8001
